compiler-core/src/go/tests/snapshots/gleam_core__go__tests__numbers__preceeding_zeros_float_const.snap
---
source: compiler-core/src/go/tests/numbers.rs
expression: "\nconst x = 09_179.1\n"
snapshot_kind: text
---
----- SOURCE CODE

const x = 09_179.1


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

var x gleam_P.Float_t = 9_179.1
